icons and links added, title modifications done

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>portfoli_web</title>
+  <title>Curriculum Vitae</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
