--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <script src="splash/splash.js"></script>
 </head>
 <body>
-<div class="heart"></div>
+<div class="loading">Loading...</div>
 <script src="main.dart.js" type="application/javascript"></script>
 <script>
         window.addEventListener('load', function(ev) {
