loader text fixed

--- a/web/index.html
+++ b/web/index.html
@@ -63,7 +63,7 @@
 
 <body>
 <!-- Loading message -->
-<div class="loading">Wait, it's Loading...</div>
+<div class="loading">Loading...</div>
 
 </div>
 
